--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: commandy
 description: A modern Flutter package for managing asynchronous commands and state effectively.
-version: 0.1.0+1
+version: 0.1.1
 repository: https://github.com/Hapkiduki/commandy
 issue_tracker: https://github.com/Hapkiduki/commandy/issues
-topics: [commandy, state-management, command-pattern]
+topics: [commandy, state-management, command-pattern, viewmodel]
 screenshots:
   - description: Commandy Logo.
     path: commandy_logo.png
